<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    tools:context=".RegisterActivity">


<!--    register title and subtitle-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registerTitle"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="28sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subtitle"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="12sp"/>

    <!--    name field-->
    <TextView
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nameLabel"
        android:textColor="@color/black"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp" />

    <EditText
        android:id="@+id/registerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:gravity="center"
        android:padding="10dp"
        android:hint="@string/nameHint"
        android:inputType="textEmailAddress"
        android:background="@drawable/default_border"
        android:autofillHints="" />

    <!--    email field-->
    <TextView
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emailLabel"
        android:textColor="@color/black"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp" />

    <EditText
        android:id="@+id/registerEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:gravity="center"
        android:padding="10dp"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        android:background="@drawable/default_border"
        android:autofillHints="" />

    <!--    password field-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passwordLabel"
        android:layout_marginTop="25dp"
        android:textColor="@color/black"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp" />

    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:gravity="center"
        android:padding="10dp"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:background="@drawable/default_border"
        android:autofillHints="" />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/requirement"
        android:textColor="@color/gray"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp" />

    <!--    submit button-->
    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:background="@drawable/button_design"
        />

    <!--    log in suggestion-->
    <TextView
        android:id="@+id/loginLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/already"
        android:gravity="center"
        android:textColor="@color/black"/>

</LinearLayout>