<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddActivity"
    android:gravity="center"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="30dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="8dp"
        app:cardElevation="3dp"
        app:cardBackgroundColor="@color/white">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="40dp"
            android:orientation="vertical">

    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:text="@string/addTo" />

    <ImageView
        android:id="@+id/chooseImage"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"/>

    <Button
        android:id="@+id/uploadButton"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="@font/gudea"
        android:text="@string/upload" />
    
    <EditText
        android:id="@+id/eItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/itemName"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:gravity="center"
        android:inputType="text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="81dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="Quantity"/>

            <EditText
                android:id="@+id/eQuantity"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint=""/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expiringDate"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginRight="40dp"/>

            <EditText
                android:id="@+id/eExpiringDate"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:hint=""
                android:inputType="text" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="77dp"/>



            <Spinner
                android:id="@+id/spinners"
                android:padding="10dp"
                android:spinnerMode="dropdown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">


    <TextView
        android:id="@+id/cancelButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:gravity="center"
        android:textStyle="bold"/>

        <TextView
            android:id="@+id/addButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:gravity="center"
            android:textColor="@color/green"
            android:textStyle="bold"/>

    </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>