<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UpdateActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="@drawable/background">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="35dp"
                android:layout_marginRight="35dp"
                android:text="@string/delete"
                android:textColor="@color/orange"

                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/editTo"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/uEditItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="30dp"
                android:gravity="center"
                android:fontFamily="@font/gudea"
                android:hint="@string/itemName"
                android:inputType="text"
                android:importantForAutofill="no" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="30dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="81dp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/gudea"
                        android:text="@string/quantity2"
                        android:textSize="20sp"
                        android:layout_marginEnd="81dp" />

                    <EditText
                        android:id="@+id/uQuantity"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:fontFamily="@font/gudea"
                        android:importantForAutofill="no" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="40dp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/gudea"
                        android:text="@string/expiringDate"
                        android:textSize="20sp"
                        android:layout_marginEnd="40dp" />

                    <EditText
                        android:id="@+id/uExpiringDate"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:fontFamily="@font/gudea"
                        android:importantForAutofill="no" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:textColor="@color/black"
                        android:fontFamily="@font/gudea"
                        android:textSize="20sp"
                        android:layout_marginRight="78dp"/>



                    <Spinner
                        android:id="@+id/spinners"
                        android:padding="10dp"
                        android:spinnerMode="dropdown"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/cancelButton"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/cancel"

                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/updateButton"
                    android:layout_width="120dp"
                    android:textColor="@color/green"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/update"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>